--- a/src/App.css
+++ b/src/App.css
@@ -91,6 +91,7 @@ input:focus {
   width: 40px;
   height: 40px;
   border-radius: 3px;
+  cursor: pointer;
 }
 .cart-count {
   position: absolute;
@@ -121,4 +122,9 @@ input:focus {
   max-height: 500px;
   overflow-y: scroll;
   padding: 10px;
+  height: fit-content;
+}
+.items-container {
+  display: flex;
+  justify-content: space-between;
 }
