--- a/src/App.css
+++ b/src/App.css
@@ -115,7 +115,7 @@ input:focus {
 .card-display {
   position: absolute;
   background-color: bisque;
-  width: 240px;
+  width: 340px;
   top: 42px;
   bottom: 0;
   right: 0;
@@ -123,6 +123,9 @@ input:focus {
   overflow-y: scroll;
   padding: 10px;
   height: fit-content;
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
 }
 .cart-item {
   display: flex;
